Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-89175

quick3d: set property 'parent' of Node not work

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.2.0
    • 6.0.0 Beta2, 6.0.0
    • Quick: 3D
    • None
    • Windows
    • 2
    • da8cba29b771951e624fac8b9c18bdd67e5a6378
    • Qt Quick 3D - 51/52, Qt Quick 3D - 2021 - Weeks 1/2, Qt Quick 3D - 2021 - Weeks 3/4, Qt Quick 3D - 2021 - Weeks 5/6, Qt Quick 3D - 2021 Week 15/16

    Description

      the position/rotation can't work as expected after set parent of Node.

      I found some info in qquick3dobject.cpp, if that it true, how to change 'parent' after created?

       \note Currently for 3D items to be correctly handled by the scene manager
      when parenting 3D objects from C++ it is necessary to call
      QQuick3DObject::setParentItem before the QObject::setParent. This requirement is
      likely to change in a future release though.

      I like using parent to define Node / Joint relation, but not nested model.

      Attachments

        1. example.jpg
          example.jpg
          31 kB
        2. quick3dbug.zip
          1.32 MB
        For Gerrit Dashboard: QTBUG-89175
        # Subject Branch Project Status CR V

        Activity

          People

            tuliniemi Jere Tuliniemi
            niqingliang2003 niqingliang2003
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes