Fix setting parent of a Node

Assigning parent in QML sets the parentItem not the parent, so ask for
the parentItem during updateDirtySpatialNode to update the hierarchy.

Task-number: QTBUG-89175
Change-Id: I33665a2f9d71f4059be63b0b6189b5651015dc94
Reviewed-by: Antti Määttä <antti.maatta@qt.io>
Reviewed-by: Jonas Karlsson <jonas.karlsson@qt.io>
Reviewed-by: Andy Nichols <andy.nichols@qt.io>